yamls/ocp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grocery6
    version: v1
  name: grocery6
spec:
  selector:
    matchLabels:
      app: grocery6
      version: v1
  template:
    metadata:
      labels:
        app: grocery6
        version: v1
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/$NAMESPACE/app
        imagePullPolicy: Always
        name: grocery6
        ports:
        - containerPort: 3000
