yamls/ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: grocery6
  name: grocery6
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: grocery6
