yamls/ocp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: grocery6
  name: grocery6
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: grocery6
    weight: 100
